completed for hosting

--- a/school/templates/contact.html
+++ b/school/templates/contact.html
@@ -1,6 +1,6 @@
 {% include "base.html" %}
-{%load static%}
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 <form method="post">
   {% csrf_token %}
 <div class="wrapper">
