--- a/school/templates/footer.html
+++ b/school/templates/footer.html
@@ -3,8 +3,7 @@
       <div class="left box">
         <div class="upper">
           <div class="topic" style="font-family: 'Bebas Neue', cursive;">About us</div>
-          <p>CodingLab is a channel where you can learn HTML,
-          CSS, and also JavaScript along with creative CSS Animations and Effects.</p>
+          <p>Itech Academy aims at uplifting the living standard of the world by providing a passionate career for everyone. We promise complete job satisfaction by fetching the right career. Hence, there arises no question of mental stress or work pressure.</p>
         </div>
       </div>
       <div class="middle box">
@@ -19,10 +18,10 @@
       <div class="right box">
         <div class="topic"style="font-family: 'Bebas Neue', cursive;">Subscribe us</div>
           <div class="media-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100090492364872"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com/__.itechacademy._?igshid=NTc4MTIwNjQ2YQ=="><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/itechacademy32"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UC3Zghn4NHcw4jE-cMXLz5rw"><i class="fab fa-youtube"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
           </div>
         <div class="lower">
