--- a/school/templates/advanced.html
+++ b/school/templates/advanced.html
@@ -2,20 +2,15 @@
 {% load static %}
 
 
-<section>
-    <div style="border: solid 2px white;margin-top: 5rem;width: 65rem;height: 70rem;background-color: white;border-radius: 2rem;" class="container-fluid">
+<section class="advanced-foundation">
+    <div class="container-fluid">
         <div  class="row">
             <div class="col-sm-12">
                 
-              <h1 style="color: rgb(1, 1, 49);font-family: Georgia, 'Times New Roman', Times, serif;margin-top: 4rem;font-size: 4rem;">ADVANCED Master Level</h1>
+              <h1 style="color: rgb(1, 1, 49);font-family: system-ui;margin-top: 4rem;font-size: 3.2rem;text-align: center;">Advanced Level</h1>
             </div>
         </div>
-        <hr style="color:rgb(45, 196, 45);height: 0.5rem;">
-        <div class="row">
-            <div class="col-sm-6">
-              <img style="border-radius: 1rem;margin-left: 16rem;" src="https://assets.kpmg.com/is/image/kpmg/US-learning-business%20meeting:cq5dam.web.512.341">
-            </div>
-        </div>
+        <hr style="color:rgb(45, 196, 45);height: 0.5rem;" class="advanced-line">
         <div class="row">
             <div class="col-sm-12">
                 <p style="margin-top: 3rem;">Advanced Level is the second level of the course which helps you to become an expert career coach. This level has a duration of two months which includes a 20 hours training session. Apart from providing interactive video sessions and personalised learning portals, the training session also provides entrance, scholarship programs, and study abroad facilities in addition. This level helps you to utilise the professional possibilities of the career counselling field.
