--- a/school/templates/footer.html
+++ b/school/templates/footer.html
@@ -22,7 +22,7 @@
             <a href="https://instagram.com/__.itechacademy._?igshid=NTc4MTIwNjQ2YQ=="><i class="fab fa-instagram"></i></a>
             <a href="https://twitter.com/itechacademy32"><i class="fab fa-twitter"></i></a>
             <a href="https://www.youtube.com/channel/UC3Zghn4NHcw4jE-cMXLz5rw"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/itech-academy-906224276/"><i class="fab fa-linkedin-in"></i></a>
           </div>
         <div class="lower">
           <div class="topic" style="font-family: 'Bebas Neue', cursive;">Contact us</div>
