--- a/school/templates/index.html
+++ b/school/templates/index.html
@@ -66,7 +66,7 @@ $(".close").click(function(){
      <img class="display-image" src="{% static 'image/pic122.jpg' %}"> 
   <div class="txt">
     <h1 class="display-text"><strong>  Your Career  <span id="nxt"> to the Next Level...</span> </strong></h1>
-    <p class="touch">Touching Lives Transforming Society !</p>
+    <p class="touch" style="font-family: 'cinzel', serif;">Touching Lives Transforming Society !</p>
     <a class="button1"   href="#">Syllabus</a>
     <a class="button2"  href="{% static 'pdfs/Brochure Itech acadamy.pdf'  %}" target="_blank">Brochure</a>
   </div>
@@ -136,9 +136,6 @@ $(".close").click(function(){
     </div>
    </div> 
 </section>
-
-
-
 
 
 
@@ -254,6 +251,35 @@ $(".close").click(function(){
 
 
 
+<section id="highlight">
+  <h1 class="high-h1" style="font-family: 'Bebas Neue', cursive; text-align: center;">Highlights</h1>
+
+  <div class="container">
+  <div class="highlight-text">
+      <h1 style="color:white;font-family: 'Bebas Neue', cursive;"> About us</h1>
+      <p class="highlight-txt"><i class="bi bi-1-circle-fill"></i> Self-belief</p>
+      <p class="highlight-txt"><i class="bi bi-2-circle-fill"></i> Success</p>
+      <p class="highlight-txt"><i class="bi bi-3-circle-fill"></i> A firm aim</p>
+      <p class="highlight-txt"><i class="bi bi-4-circle-fill"></i> Growth in business</p>
+      <p class="highlight-txt"><i class="bi bi-5-circle-fill"></i> Good relationship</p>
+  </div>
+
+    <div class="highlight-image">
+        <img class="h-image2" src="{% static 'image/high.jpg' %}">
+    </div>
+    <div class="highlight-text">
+        <h1 style="color: white;font-family: 'Bebas Neue', cursive;">About Us</h1>
+        <p class="highlight-txt"><i class="bi bi-1-circle-fill"></i> Stressless life</p>
+        <p class="highlight-txt"><i class="bi bi-2-circle-fill"></i> Health</p>
+        <p class="highlight-txt"><i class="bi bi-3-circle-fill"></i> Energetic</p>
+        <p class="highlight-txt"><i class="bi bi-4-circle-fill"></i> A firm resolve to win</p>
+        <p class="highlight-txt"><i class="bi bi-5-circle-fill"></i> Will act with responsibility</p>
+      </div>
+</div>
+</section>
+
+
+
   <section class="mid-section">
     <div class="section-item-container">
       <div class="section-bg">
@@ -363,7 +389,7 @@ $(".close").click(function(){
                 <div class="phone details">
                     <i class="fas fa-phone-alt"></i>
                     <div class="topic" style="font-family: 'Bebas Neue', cursive;">Phone</div>
-                    <div class="text-one"style="font-family:'Poppins', sans-serif;">+91 80899 08174</div>
+                    <div class="text-one"style="font-family:'Poppins', sans-serif;">+91 8589877125</div>
                     <div class="text-two"style="font-family:'Poppins', sans-serif;">+0495 4603443</div>
 
                 </div>
