--- a/school/static/css/style.css
+++ b/school/static/css/style.css
@@ -341,6 +341,154 @@
 
   }
 
+  /* highlights */
+  .high-h1 {
+    color: white;
+    padding-top: 30px;
+}
+
+#highlight{
+  background-color: #002333;
+
+}
+  .container {
+
+display: flex;
+flex-direction: row;
+justify-content: center;
+gap: 70px;
+height: 110vh;
+
+align-items: center;
+
+
+}
+
+.highlight-image {
+
+width: 40%;
+}
+
+.highlight-text {
+width: 40%;
+
+}
+
+.h-image2 {
+width: 100%;
+height: 400px;
+border-radius: 15px;
+box-shadow: 2px 2px 5px black;
+}
+
+.highlight-txt {
+color: white;
+font-family: 'Poppins', sans-serif;
+font-size: 18px;
+}
+.bi-dot{
+font-size: 35px;
+}
+
+
+
+@media (max-width: 767px) {
+
+  .high-h1 {
+    margin-top: 100px;
+}
+
+  .container {
+margin-top: 10%;
+margin-bottom: 20%;
+flex-direction: column;
+align-items: center;
+height: 927px;
+justify-content: center;
+gap: 50px;
+
+}
+
+.highlight-image {
+order: 2;
+width: 60%;
+}
+
+.highlight-text {
+order: 1;
+width: 80%;
+
+}
+
+.h-image2 {
+
+height: 250px;
+
+}
+}
+
+@media screen and (min-width:767px) and (max-width:1024px) {
+
+  .high-h1 {
+    margin-top: 100px;
+}
+
+#highlight{
+  height: 1200px;
+}
+
+.container {
+  margin-top: 4%;
+margin-bottom: 20%;
+
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+align-items: center;
+height: 800px;
+
+
+
+}
+.highlight-image {
+order: 1;
+width: 100%;
+margin-top: 0px;
+}
+
+.highlight-text {
+order: 2;
+width: 90%;
+
+}
+
+
+.h-image2 {
+
+height: 60vh;
+
+}
+
+}
+@media screen and (min-width:1025px) {
+  .high-h1 {
+    margin-top: 150px;
+}
+
+  .container {
+    margin-top: 0%;
+  margin-bottom: 20%;
+  height: 70vh;
+
+  
+  }  
+  #highlight{
+    height: 650px;
+  }
+  
+
+}
+
   /* cards */
 
   .card {
