--- a/school/static/css/style.css
+++ b/school/static/css/style.css
@@ -1810,6 +1810,43 @@ height: 60vh;
     font-size: 50px;
   }
 
+  @media (max-width: 767px) {
+
+    #reg-row {
+      width: 90%;
+      height: 900px;
+      border-radius: 10px;
+      background: #fff;
+      box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.2);
+      margin-top: 50px;
+      margin-bottom: 50px;
+    }
+  
+    .input-box {
+      width: 90%;
+      box-sizing: border-box;
+    }
+  
+    .input-field {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      padding: 0 10px 0 10px;
+      width: 100%;
+    }
+    .submit {
+      border: none;
+      outline: none;
+      height: 45px;
+      background: #002698a9;
+      border-radius: 5px;
+      transition: .4s;
+      width: 100%;
+    }
+  
+  
+  }
+
   /* contact us */
 
   .container-contact {
