--- a/school/templates/index.html
+++ b/school/templates/index.html
@@ -93,9 +93,9 @@ $(".close").click(function(){
 <section id="course" class="courses">
    <div class="container-fluid"> 
   <div class="row" style="width: 100%; height: auto;">
-    <div class="col-sm-12" style="color: white;text-align: center;margin-top:100px;">
+    <div class="col-sm-12" style="color: white;text-align: center;margin-top:24px;">
       <h1  style="font-family: 'Bebas Neue', cursive;font-size: 50px;">Courses</h1>
-      <p style="font-family:'Poppins', sans-serif;font-size:20px ;">We include all the basic training and educational programs in our course which helps students in fetching their right profession. The modules will support in acquiring the right knowledge and skills, thus boosting the confidence level. We utilise innovative career guidance tools to provide world class training. Through our course we ensure each of the candidates are receiving optimum support by acting as a pathfinder. The modules we provide can be followed by anyone even if they are completely unaware of the career counselling field. We provide the apt training sessions to mend you to an expert career counsellor.
+      <p style="font-family:'Poppins', sans-serif;font-size:20px ; margin-top: 20px;">We include all the basic training and educational programs in our course which helps students in fetching their right profession. The modules will support in acquiring the right knowledge and skills, thus boosting the confidence level. We utilise innovative career guidance tools to provide world class training. Through our course we ensure each of the candidates are receiving optimum support by acting as a pathfinder. The modules we provide can be followed by anyone even if they are completely unaware of the career counselling field. We provide the apt training sessions to mend you to an expert career counsellor.
       </p>
     </div>
   </div>
@@ -256,24 +256,22 @@ $(".close").click(function(){
 
   <div class="container">
   <div class="highlight-text">
-      <h1 style="color:white;font-family: 'Bebas Neue', cursive;"> About us</h1>
-      <p class="highlight-txt"><i class="bi bi-1-circle-fill"></i> Self-belief</p>
-      <p class="highlight-txt"><i class="bi bi-2-circle-fill"></i> Success</p>
-      <p class="highlight-txt"><i class="bi bi-3-circle-fill"></i> A firm aim</p>
-      <p class="highlight-txt"><i class="bi bi-4-circle-fill"></i> Growth in business</p>
-      <p class="highlight-txt"><i class="bi bi-5-circle-fill"></i> Good relationship</p>
+      <p class="highlight-txt"><i class="bi bi-code"></i> Self-belief</p>
+      <p class="highlight-txt"><i class="bi bi-code"></i> Success</p>
+      <p class="highlight-txt"><i class="bi bi-code"></i> A firm aim</p>
+      <p class="highlight-txt"><i class="bi bi-code"></i> Growth in business</p>
+      <p class="highlight-txt"><i class="bi bi-code"></i> Good relationship</p>
   </div>
 
     <div class="highlight-image">
         <img class="h-image2" src="{% static 'image/high.jpg' %}">
     </div>
     <div class="highlight-text">
-        <h1 style="color: white;font-family: 'Bebas Neue', cursive;">About Us</h1>
-        <p class="highlight-txt"><i class="bi bi-1-circle-fill"></i> Stressless life</p>
-        <p class="highlight-txt"><i class="bi bi-2-circle-fill"></i> Health</p>
-        <p class="highlight-txt"><i class="bi bi-3-circle-fill"></i> Energetic</p>
-        <p class="highlight-txt"><i class="bi bi-4-circle-fill"></i> A firm resolve to win</p>
-        <p class="highlight-txt"><i class="bi bi-5-circle-fill"></i> Will act with responsibility</p>
+        <p class="highlight-txt"><i class="bi bi-code"></i> Stressless life</p>
+        <p class="highlight-txt"><i class="bi bi-code"></i> Health</p>
+        <p class="highlight-txt"><i class="bi bi-code"></i> Energetic</p>
+        <p class="highlight-txt"><i class="bi bi-code"></i> A firm resolve to win</p>
+        <p class="highlight-txt"><i class="bi bi-code"></i> Will act with responsibility</p>
       </div>
 </div>
 </section>
