--- a/school/static/css/style.css
+++ b/school/static/css/style.css
@@ -380,6 +380,9 @@ height: 400px;
 border-radius: 15px;
 box-shadow: 2px 2px 5px black;
 }
+.h-image2:hover {
+transform: translateY(10px);
+}
 
 .highlight-txt {
 color: white;
@@ -1067,7 +1070,7 @@ height: 60vh;
 
   #services {
     width: 100%;
-    margin-top: 150px;
+    margin-top: 60px;
   }
 
   .heading {
